# zentor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PLANS.md  README.md  RUN_LOG.md  SECURITY_MODEL.md  STATUS.md  TESTING.md  TODO.md  agent.md
core/avorax_update_service/: Cargo.toml
core/avorax_update_service/src/: update_verifier.rs
core/pasus_local_core/: Cargo.toml  README.md
core/pasus_local_core/src/: main.rs
core/pasus_local_core/src/ai/: mod.rs  model_metadata.rs  model_runner.rs  thresholds.rs  training_labels.rs
core/pasus_local_core/src/allowlist/: allowlist_store.rs
core/pasus_local_core/src/api/: mod.rs
core/pasus_local_core/src/protection/: file_monitor.rs  guard_service.rs
core/pasus_local_core/src/quarantine/: quarantine_record.rs  quarantine_store.rs
core/pasus_local_core/src/scanner/: clamav_provider.rs  file_walker.rs  heuristic_provider.rs  mod.rs  reputation_provider.rs  scan_job.rs  scan_progress.rs  scan_result.rs  threat_result.rs
core/pasus_local_core/src/watcher/: mod.rs
core/zentor_guard_service/: Cargo.toml  README.md
core/zentor_guard_service/src/: driver_health.rs  driver_ipc.rs  known_bad_cache.rs  known_good_cache.rs  main.rs  preexecution_policy.rs  self_test.rs
core/zentor_native_engine/: Cargo.toml
core/zentor_native_engine/src/: config.rs  engine.rs  lib.rs
core/zentor_native_engine/src/analyzers/: entropy.rs  file_type.rs  mod.rs  strings.rs
core/zentor_native_engine/src/behavior/: behavior_score.rs  file_activity.rs  persistence_monitor.rs  process_event.rs  ransomware_guard.rs  script_monitor.rs
core/zentor_native_engine/src/heuristics/: false_positive_policy.rs  location.rs  mod.rs  packer.rs  persistence.rs  ransomware_indicators.rs  scoring.rs  script_obfuscation.rs  suspicious_imports.rs
core/zentor_native_engine/src/ml/: explanation.rs  feature_extractor.rs  feature_vector.rs  mod.rs  model.rs  model_pack.rs  model_runner.rs  thresholds.rs
core/zentor_native_engine/src/quarantine/: mod.rs  quarantine_action.rs  quarantine_store.rs
core/zentor_native_engine/src/rules/: mod.rs  rule.rs  rule_actions.rs  rule_conditions.rs  rule_parser.rs  rule_vm.rs
core/zentor_native_engine/src/scan/: archive_scanner.rs  content_reader.rs  file_walker.rs  full_scan_planner.rs  mod.rs  scan_job.rs  scan_progress.rs  scan_result.rs  scan_scheduler.rs  scan_scope.rs
core/zentor_native_engine/src/signatures/: eicar_signature.rs  hash_signatures.rs  mod.rs  pack_verifier.rs  pe_import_signatures.rs  script_signatures.rs  signature.rs  signature_compiler.rs  signature_matcher.rs  string_signatures.rs
core/zentor_native_engine/src/telemetry/: audit_log.rs  local_event.rs  mod.rs
core/zentor_native_engine/src/tests/: mod.rs
services/api/: Cargo.toml  Dockerfile  README.md
services/api/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  routes.rs
(+455 files in other folders)
