[package]
name = "avorax_update_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["serde"] }
getrandom = "0.2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
walkdir = "2.5"
zip = "2.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3.14"
