[package]
name = "zentor_guard_service"
version = "0.1.0"
edition = "2021"

[features]
default = []
compat_clamav = []
compat_yara = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zentor_native_engine = { path = "../zentor_native_engine" }
tempfile = "3.14"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
