[package]
name = "zentor_native_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zentor-signature-compiler"
path = "src/bin/zentor-signature-compiler.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
